--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
    				<img src="images/profile.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am passionate about leaveraging technology to change the world one step at a time, from automating daily tasks to help people focus on what matters, to building new systems to enable new workflows.</p>
+   				<p class="lead">I am passionate about leveraging technology to change the world one step at a time, from automating daily tasks to help people focus on what matters, to building new systems to enable new workflows.</p>
    			</div>   			
 
    		</div>   		
@@ -408,7 +408,8 @@
 
 					   <div class="description-box">
 					      <h4>Sudoku</h4>		      
-					      <p> Design a sudoku game with HTML, CSS, and JavaScript.</p>
+						  <p> A sudoku game with HTML, CSS, and JavaScript. <a href="https://quang-dang.github.io/sudoku/" target="_blank" style="color: blue;">Let's play! </a></p>
+						
 
 					      <div class="categories">Web Development</div>			               
 					   </div>
@@ -428,8 +429,9 @@
 
 					   <div class="description-box">
 					      <h4>Quakr</h4>		      
-					      <p>A Twitter-like web app that is built with Ruby on Rails</p>
-
+					      <p>A Twitter-like web app that was built with Ruby on Rails. 
+							<a href="https://quakr.herokuapp.com" target="_blank" style="color: blue;">Visit Quakr</a>
+						  </p>
 					      <div class="categories">Web Development</div>			               
 					   </div>
 
@@ -452,7 +454,9 @@
  
 						   <p>Samsung InTone Mirror is built in a collaboration of an electrical engineering team, a marketing team, and a design team.</p>
 						   <p>We designed, built, and programmed a prototype circuit board using the Atmega328p microcontroller, AVR
-							toolchain, and C programming language.</p>
+							toolchain, and C programming language.
+							<a href="https://docs.google.com/presentation/d/1f-bhvj7xX50fVtQdBN3_YKyz9iYPtBwDS8BCIehGnZk/edit#slide=id.p3" target="_blank" style="color: blue;">Check out our presentation deck!</a>
+							</p>
 					      <div class="categories">Embedded System</div>			               
 					   </div>
 
@@ -471,8 +475,9 @@
 					   <div class="description-box">
 					      <h4>Studdies</h4>		      
 						  <p>While the digital market is infested with social and dating apps, there is a lack of products that target to connect students specifically. Studdies is here to change that. Studdies will enable students to connect to study together, improving both their academic lives and social lives.  We estimated that Studdies could earn $2 million in the first 2 years. </p>
-						  <p>Studdies is a tech venture idea that was developed by 4 USC students. We ideated, defined and refined product features and market strategies through iterations of customer discovery interviews.</p>
-
+						  <p>Studdies is a tech venture idea that was developed by 4 USC students. We ideated, defined and refined product features and market strategies through iterations of customer discovery interviews.
+						  <a href="https://docs.google.com/presentation/d/1s9etaQh-xzvxFjrRRE0c0LyDXDI5fy8l4KAKA5CrJG0/edit" target="_blank" style="color:blue">Check out our presentation deck!</a>
+						  </p>
 					      <div class="categories">Entrepreneurship</div>			               
 					   </div>
 
