--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				</li>
 				<li>
 					<strong>Backend Development:</strong>
-					<span>RESTful APIs, NoSQL </span>
+					<span>REST APIs, NoSQL </span>
 				</li>
 				<li>
 					<strong>Technologies:</strong>
@@ -223,7 +223,7 @@
 	   					<h4>Chevron</h4>
 	   					<p>Built a distributed system on Azure cloud to digitize a quality management workflow for 4 U.S. oil refineries and 2 international facilities.</p>
 						<p>Utilized Agile methodology in a Scrum team to develop product features through rapid iterations.</p>
-						<p>Technologies leveraged: .NET MVC, NativeScript with Angular, RESTful API, NoSQL, Azure.</p>
+						<p>Technologies leveraged: .NET MVC, NativeScript with Angular, REST API, NoSQL, Azure.</p>
 					</div>
 
 	   			</div> <!-- /timeline-block -->
