add github link to project

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
 					   <div class="description-box">
 					      <h4>Sudoku</h4>		      
 						  <p> A sudoku game with HTML, CSS, and JavaScript. <a href="https://quang-dang.github.io/sudoku/" target="_blank" style="color: blue;">Let's play! </a></p>
+						  <a href="https://github.com/quang-dang/sudoku" target="_blank"><i class="fa fa-github-square"></i></a>
 						
 
 					      <div class="categories">Web Development</div>			               
@@ -432,6 +433,7 @@
 					      <p>A Twitter-like web app that was built with Ruby on Rails. 
 							<a href="https://quakr.herokuapp.com" target="_blank" style="color: blue;">Visit Quakr</a>
 						  </p>
+						  <a href="https://github.com/quang-dang/quakr" target="_blank"><i class="fa fa-github-square"></i></a>
 					      <div class="categories">Web Development</div>			               
 					   </div>
 
@@ -457,6 +459,7 @@
 							toolchain, and C programming language.
 							<a href="https://docs.google.com/presentation/d/1f-bhvj7xX50fVtQdBN3_YKyz9iYPtBwDS8BCIehGnZk/edit#slide=id.p3" target="_blank" style="color: blue;">Check out our presentation deck!</a>
 							</p>
+							<a href="https://github.com/quang-dang/ee459" target="_blank"><i class="fa fa-github-square"></i></a>
 					      <div class="categories">Embedded System</div>			               
 					   </div>
 
