add sudoku solver project

--- a/index.html
+++ b/index.html
@@ -333,6 +333,22 @@
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
+				<div class="bgrid folio-item">
+					<div class="item-wrap">
+					   <img src="images/portfolio/sudokuSolver.mp4" alt="Sudoku Solver Project">
+					   <a href="#modal-05" class="overlay">	                  	           
+						  <div class="folio-item-table">
+							  <div class="folio-item-cell">
+										 <h3 class="folio-title">Sudoku Solver</h3>	     					    
+										   <span class="folio-types">
+											   Web Development
+										 </span>
+								</div>	                      	
+						  </div>                    
+					   </a>
+					</div>	               
+				</div> <!-- /folio-item -->
+
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/sudoku.png" alt="Sudoku Project">
@@ -347,9 +363,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>	               
-	        		</div> <!-- /folio-item -->
+	        	</div> <!-- /folio-item -->
 
-	        		<div class="bgrid folio-item">
+	        	<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/quakr.png" alt="Quakr Project">
 	               	<a href="#modal-02" class="overlay">              		                  
@@ -363,7 +379,7 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->
+	        	</div> <!-- /folio-item -->
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
@@ -379,7 +395,7 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->
+	        	</div> <!-- /folio-item -->
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
@@ -395,11 +411,32 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->     
+	        	</div> <!-- /folio-item -->     
 
 	        		
 	            <!-- modal popups - begin
-	            ============================================================= -->
+				============================================================= -->
+				<div id="modal-05" class="popup-modal slider mfp-hide">	
+
+					<div class="media">
+						<img src="images/portfolio/sudokuSolver.mp4" alt="Sudoku Solver" />
+					</div>      	
+
+				  <div class="description-box">
+					 <h4>Sudoku Solver</h4>		      
+					 <p> Simulating sudoku solver backtracking algorithm with JavaScript, HTML, and CSS. <a href="https://quang-dang.github.io/sudokuSolver/" target="_blank" style="color: blue;">Check it out! </a></p>
+					 <a href="https://github.com/quang-dang/sudokuSolver" target="_blank"><i class="fa fa-github-square"></i></a>
+				   
+
+					 <div class="categories">Web Development</div>			               
+				  </div>
+
+				<div class="link-box">
+				   <a href="https://www.github.com/quang-dang/sudokuSolver" target="_blank">Details</a>
+					 <a href="#" class="popup-modal-dismiss">Close</a>
+				</div>		      
+
+			  </div> <!-- /modal-01 -->
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
