--- a/index.html
+++ b/index.html
@@ -207,7 +207,41 @@
    		<div class="col-twelve">
 
    			<div class="timeline-wrap">
+				<div class="timeline-block">
 
+					<div class="timeline-ico">
+						<i class="fa fa-briefcase"></i>
+					</div>
+
+					<div class="timeline-header">
+						<h3>Software Development Engineer II</h3>
+						<p>October 2020 - Present</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>Amazon</h4>
+						<p style="padding-bottom: 2em;">Amazon Physical Stores</p>
+				 </div>
+
+				</div> <!-- /timeline-block -->
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+						<i class="fa fa-briefcase"></i>
+					</div>
+
+					<div class="timeline-header">
+						<h3>Software Developer I</h3>
+						<p>July 2020 - September 2020</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>OSIsoft</h4>
+						<p> Joined the PI server team to help enable more cloud features/capabilities with on-prem products.</p>
+						<p> Enabled unit testing by setting up Xunit Test foundation projects for microservices.</p>
+				 </div>
+
+				</div> <!-- /timeline-block -->
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
