--- a/index.html
+++ b/index.html
@@ -214,13 +214,32 @@
 					</div>
 
 					<div class="timeline-header">
+						<h3>Software Engineer</h3>
+						<p>June 2021 - Present</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>Facebook</h4>
+						<p style="padding-bottom: 2em;">Software engineer, product</p>
+				 </div>
+
+				</div> <!-- /timeline-block -->
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+						<i class="fa fa-briefcase"></i>
+					</div>
+
+					<div class="timeline-header">
 						<h3>Software Development Engineer II</h3>
-						<p>October 2020 - Present</p>
+						<p>October 2020 - May 2021</p>
 					</div>
 
 					<div class="timeline-content">
 						<h4>Amazon</h4>
-						<p style="padding-bottom: 2em;">Amazon Physical Stores</p>
+						<p> Worked on backend services to detect and mitigate frauds and abuses in Amazon Physical Stores
+						to protect both Amazon and its customers.</p>
+						<p> Tech stacks: Java, AWS, DynamoDB</p>
 				 </div>
 
 				</div> <!-- /timeline-block -->
