fixed Chevron end date

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Software Engineer</h3>
-	   					<p>July 2018 - Present</p>
+	   					<p>July 2018 - July 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
