add new project

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 
    				<img src="images/profile.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am passionate about leveraging technology to change the world one step at a time, from automating daily tasks to help people focus on what matters, to building new systems to enable new workflows.</p>
+   				<p class="lead">I am passionate about leveraging technology to change the world one step at a time, 
+					from automating daily tasks to help people focus on what matters, to building new systems to enable new workflows.</p>
    			</div>   			
 
    		</div>   		
@@ -118,7 +119,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I am a fullstack developer with experience in building distributed systems on Microsoft Azure cloud.</p>
+   			<p>I am a fullstack developer, with experiences across multiple industries, from small IT shops to big tech companies</p>
 
    			<ul class="info-list">
    				<li>
@@ -131,7 +132,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.quangdang.info</span>
+   					<span>www.quang-dang.github.io/me</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -150,7 +151,7 @@
 			   <ul class="info-list">
 				<li>
 					<strong>Web Development:</strong>
-					<span>.NET MVC, Django, HTML, CSS, JQuery, AJAX</span>
+					<span>.NET MVC, Django, HTML, CSS, JQuery, AJAX, React</span>
 				</li>
 				<li>
 					<strong>Mobile Development:</strong>
@@ -158,15 +159,15 @@
 				</li>
 				<li>
 					<strong>Backend Development:</strong>
-					<span>REST APIs, NoSQL </span>
+					<span>REST APIs, NoSQL, GraphQL </span>
 				</li>
 				<li>
 					<strong>Technologies:</strong>
-					<span>git, Azure</span>
+					<span>git, Azure, AWS</span>
 				</li>
 				<li>
 					<strong>Languages:</strong>
-					<span>C#, Python, JavaSript</span>
+					<span>Python, C#, Java, PHP, JavaSript, TypeScript</span>
 				</li>
 
 			</ul> <!-- /info-list -->		
@@ -220,7 +221,9 @@
 
 					<div class="timeline-content">
 						<h4>Facebook</h4>
-						<p style="padding-bottom: 2em;">Software engineer, product</p>
+						<p style="padding-bottom: 2em;"> FBLite is a light weight app with about 2.5MB APK size, targeting emerging market. </p>
+						<p> I work on the creation flow, allowing people to edit and post feed, story, and reels on Facebook in emerging markets</p>
+						<p> Tech stacks: PHP, GraphQL, Bloks (similar to React) </p>
 				 </div>
 
 				</div> <!-- /timeline-block -->
@@ -367,7 +370,21 @@
 
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
+				<div class="bgrid folio-item">
+					<div class="item-wrap">
+					   <img src="images/portfolio/wordleHelper.mp4" alt="Wordle Helper Project">
+					   <a href="#modal-06" class="overlay">	                  	           
+						  <div class="folio-item-table">
+							  <div class="folio-item-cell">
+										 <h3 class="folio-title">Wordle Helper</h3>	     					    
+										   <span class="folio-types">
+											   Web Development
+										 </span>
+								</div>	                      	
+						  </div>                    
+					   </a>
+					</div>	               
+				</div> <!-- /folio-item -->
 				<div class="bgrid folio-item">
 					<div class="item-wrap">
 					   <img src="images/portfolio/sudokuSolver.mp4" alt="Sudoku Solver Project">
@@ -469,7 +486,27 @@
 				<div class="link-box">
 				   <a href="https://www.github.com/quang-dang/sudokuSolver" target="_blank">Details</a>
 					 <a href="#" class="popup-modal-dismiss">Close</a>
-				</div>		      
+				</div>	
+				
+				<div id="modal-06" class="popup-modal slider mfp-hide">	
+
+					<div class="media">
+						<img src="images/portfolio/wordleHelper.mp4" alt="Wordle Helper" />
+					</div>      	
+
+				  <div class="description-box">
+					 <h4>Wordle Helper</h4>		      
+					 <p> A wordle helper that lets you pick suggested words based on given clues with JavaScript, HTML, and CSS. <a href="https://quang-dang.github.io/wordleHelper" target="_blank" style="color: blue;">Check it out! </a></p>
+					 <a href="https://github.com/quang-dang/sudokuSolver" target="_blank"><i class="fa fa-github-square"></i></a>
+				   
+
+					 <div class="categories">Web Development</div>			               
+				  </div>
+
+				<div class="link-box">
+				   <a href="https://www.github.com/quang-dang/sudokuSolver" target="_blank">Details</a>
+					 <a href="#" class="popup-modal-dismiss">Close</a>
+				</div>	
 
 			  </div> <!-- /modal-01 -->
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
