--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 					<div class="timeline-content">
 						<h4>Facebook</h4>
-						<p style="padding-bottom: 2em;"> FBLite is a light weight app with about 2.5MB APK size, targeting emerging market. </p>
+						<p> FBLite is a light weight app with about 2.5MB APK size, targeting emerging market. </p>
 						<p> I work on the creation flow, allowing people to edit and post feed, story, and reels on Facebook in emerging markets</p>
 						<p> Tech stacks: PHP, GraphQL, Bloks (similar to React) </p>
 				 </div>
