--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>University of Southern California</h4>
+						<p>Electrical engineering courses with focus on embedded system</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
